tests/cmd_entrance_bad.out
./cmd_entrance_bad.svx:3:10: error: Expecting station name
 *entrance
          ^

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 1 survey station, joined by 0 legs.
There are 0 loops.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m
./cmd_entrance_bad.svx:4: warning: Station "2" referred to by *entrance but never used

There were 1 warning(s) and 1 error(s) - no output files produced.
