tests/cmd_entrance_bad.svx
; pos=fail warn=1 error=1
*fix 1 1 0 0
*entrance
*entrance 2
*entrance 1 ; should suppress "Unused fixed point" warning since 1.4.9
